packages/sycamore-macro/tests/component/component-fail.stderr
error: function must return `sycamore::view::View`
 --> tests/component/component-fail.rs:5:1
  |
5 | fn comp1<G: Html>() {
  | ^^^^^^^^^^^^^^^^^^^

error: const functions can't be components
  --> tests/component/component-fail.rs:15:1
   |
15 | const fn comp3<G: Html>() -> View<G> {
   | ^^^^^

error: extern functions can't be components
  --> tests/component/component-fail.rs:20:1
   |
20 | extern fn comp4<G: Html>() -> View<G> {
   | ^^^^^^

error: function components can't accept a receiver
  --> tests/component/component-fail.rs:25:19
   |
25 | fn comp5<G: Html>(self) -> View<G> {
   |                   ^^^^

error: `component` attribute can only be applied to functions
  --> tests/component/component-fail.rs:30:1
   |
30 | struct Comp7;
   | ^^^^^^^^^^^^^
